--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,551 +1,331 @@
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap');
-
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-}
-
-
-
-html{
-    height: 100%;
-}
-
-body{
-    font-family: 'Nanum Brush Script', cursive;
-    min-height: 100%;
-}
-
-
-
-
-    /* G   E   N   E   R  A   L   E  S    */
-
-
-/*     H   e   a   d   e   r */
-
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap");
 .header {
-    display: flex;
-    grid-area: header;
-    background-color: yellowgreen;
-    justify-content: space-evenly;
-    color: red;
-    justify-items: center;
-    align-items: center;
-    height: 140px;
+  display: flex;
+  grid-area: header;
+  background-color: yellowgreen;
+  justify-content: space-evenly;
+  color: red;
+  justify-items: center;
+  align-items: center;
+  height: 140px;
+}
+.header .navbar ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background-color: red;
+}
+.header .navbar ul li {
+  padding: 20px;
+}
+.header .navbar ul li:hover {
+  color: black;
+}
+.header .navbar ul li a {
+  color: pink;
+  font-size: 1.2rem;
 }
 
-
-.navbar ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    background-color: red;
-}
-
-.navbar ul li {
-    padding: 20px;
-}
-
-.navbar ul li :hover{
-    color: black;
-}
-
-
-.navbar ul li a{
-    color: pink;
-    font-size: 1.2rem;
-}
-
-
-@media screen and (min-width: 1200px){
-
-    .header{
-        background-color: yellow;
-        display: flex;
-        justify-content: end;
-        border: 3px solid;
-        height: 200px
-    }
-
-    .navbar{
-        display: flex;
-        width: auto;
-        align-items: flex-end;
-    }
-
-    .navbar ul {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: flex-end;
-
-    }
-
-    .navbar ul li {
-        padding: 20px;
-    }
-
-    .navbar ul li a{
-        color: rgb(246, 255, 0);
-        font-size: 1.3rem;
-
-    }
-}
-    
-
-
-
-
-    /*    F  o  o  T  E  R     */
-
-.footer {
-    display: flex;
-    grid-area: footer;
-    height: 130px;
+@media screen and (min-width: 1200px) {
+  .header {
     background-color: yellow;
-    font-size: 0.8rem;
-}
-
-
-.footer_text {
-    width: 50%;
     display: flex;
-    justify-content: left;
-    margin-top: 80px;
-    margin-left: 5px;
-}
-
-.footer_logos {
-    width: 40%;
+    justify-content: end;
+    border: 3px solid;
+    height: 200px;
+  }
+  .header .navbar {
     display: flex;
-    flex-direction: row;
+    width: auto;
+    align-items: flex-end;
+  }
+  .header .navbar ul {
+    display: flex;
     flex-wrap: wrap;
-    justify-content: right;
-    margin-top: 20px;
+    align-items: flex-end;
+  }
+  .header .navbar ul li {
+    padding: 20px;
+  }
+  .header .navbar ul li a {
+    color: rgb(246, 255, 0);
+    font-size: 1.3rem;
+  }
+}
+.footer {
+  display: flex;
+  grid-area: footer;
+  height: 130px;
+  background-color: yellow;
+  font-size: 0.8rem;
+}
+.footer .footer_text {
+  width: 50%;
+  display: flex;
+  justify-content: left;
+  margin-top: 80px;
+  margin-left: 5px;
+}
+.footer .footer_logos {
+  width: 40%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: right;
+  margin-top: 20px;
+}
+.footer .footer_logos .footer_logos_img {
+  height: 20px;
+  width: 20px;
+  margin-left: 10px;
 }
 
-
-.footer_logos_img {
-    height: 20px;
-    width: 20px;
+@media screen and (min-width: 1200px) {
+  .footer {
+    height: 180px;
+    font-size: 20px;
+    /* grid-area: footer; */
+  }
+  .footer .footer_text {
+    margin-top: 130px;
+  }
+  .footer .footer_logos .footer_logos_img {
+    height: 30px;
+    width: 30px;
     margin-left: 10px;
+  }
 }
-
-@media screen and (min-width: 1200px){
-    .footer{
-        height: 180px;
-        font-size: 20px;
-        /* grid-area: footer; */
-    }
-
-    .footer_text {
-        margin-top: 130px;
-    }
-
-    .footer_logos_img {
-        height: 30px;
-        width: 30px;
-        margin-left: 10px;
-    }
-
-}
-
-
-
-
-
-/*          I   N    D    E     X
-
-
-
-     MOBILE FIRST    */
-
-
 .index_container {
-    font-weight: 100;
-    display: grid;
-    grid-template-areas:
-    "header"
-    "article"
-    "footer";
-    grid-template-rows: 140px 450px 140px;
-    grid-template-columns: 1fr;
-    align-items: center;
-    text-align: center;
-    min-width: 100%;
-    background-color: grey;
+  font-weight: 100;
+  display: grid;
+  grid-template-areas: "header" "article" "footer";
+  grid-template-rows: 140px 450px 140px;
+  grid-template-columns: 1fr;
+  align-items: center;
+  text-align: center;
+  min-width: 100%;
+  background-color: grey;
 }
-
 
 .index_article {
-    grid-area: article;
-    display: flex;
-    justify-content: left;
-    height: 400px;
-
+  grid-area: article;
+  display: flex;
+  justify-content: left;
+  height: 400px;
 }
 
-.index_texto{
-    font-size: 1.1rem;
-    color: white;
-    text-align: left;
-    margin: 40px 20px 0px 10px;
-
+.index_texto {
+  font-size: 1.1rem;
+  color: white;
+  text-align: left;
+  margin: 40px 20px 0px 10px;
 }
+
 .index_foto {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    width: 130px ;
-    height: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  width: 130px;
+  height: 50px;
 }
-
-
-
 
 /*     DISPLAY   TABLET     */
-
 /* @media (min-width: 768px) { */
-
-@media screen and (min-width: 768px) and (orientation: portrait){
-    .index_container {
-        font-family: 'Nanum Brush Script', cursive;
-        font-weight: 100;
-        display: grid;
-        grid-template-areas:
-        "header header"
-        "article article"
-        "footer footer";
-        grid-template-rows: 200px 500px 170px;
-        grid-template-columns: 1fr 1fr;
-        align-items: center;
-        text-align: center;
-    }
-
-    .header{
-        background-color: lavender;
-        display: flex;
-        justify-content: end;
-        border: 3px solid;
-        height: 120px
-    }
-
+@media screen and (min-width: 768px) and (orientation: portrait) {
+  .index_container {
+    font-family: "Nanum Brush Script", cursive;
+    font-weight: 100;
+    display: grid;
+    grid-template-areas: "header header" "article article" "footer footer";
+    grid-template-rows: 200px 500px 170px;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    text-align: center;
+  }
+  .header {
+    background-color: lavender;
+    display: flex;
+    justify-content: end;
+    border: 3px solid;
+    height: 120px;
+  }
 }
-
 /* @media screen and (min-width: 768px) and (orientation: landscape){
 
 } */
-
 /*     DISPLAY   DESKTOP     */
-
 @media screen and (min-width: 1200px) {
-    .index_container {
-        font-family: 'Nanum Brush Script', cursive;
-        font-weight: 100;
-        display: grid;
-        grid-template-areas:
-        "header header"
-        "article article"
-        "footer footer";
-        grid-template-rows: 200px 500px 150px;
-        grid-template-columns: 1fr 1fr;
-        align-items: center;
-        text-align: center;
-    }
-
-    .index_article {
-        grid-area: article;
-        height: 500px;
-    }
-
-
-
-    .index_texto{
-        max-width: 70%;
-        font-size: 1.7rem;
-        margin-top: 50px;
-        color: yellow;
-        margin-left: 40px;
-        margin-right: 20px;
-    }
-}
-
-
-
-
-
-
-/*       A  B  O  U  T    M E
-
-
-     MOBILE FIRST    */
-
-.aboutme_container {
+  .index_container {
+    font-family: "Nanum Brush Script", cursive;
     font-weight: 100;
     display: grid;
-    grid-template-areas:
-    "header"
-    "article"
-    "footer";
-    grid-template-rows: 140px 440px 140px;
-    grid-template-columns: 1fr;
-    /* align-items: center; */
-    text-align: left;
-    background-color: blue;
-}
-
-.aboutme_article {
+    grid-template-areas: "header header" "article article" "footer footer";
+    grid-template-rows: 200px 500px 150px;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    text-align: center;
+  }
+  .index_article {
     grid-area: article;
-    margin: 40px 20px 0px 4px;
-    display: flex;
-    justify-content: center;
-    font-size: 1.1rem;
-    color: pink;
-    height: 440px;
+    height: 500px;
+  }
+  .index_texto {
+    max-width: 70%;
+    font-size: 1.7rem;
+    margin-top: 50px;
+    color: yellow;
+    margin-left: 40px;
+    margin-right: 20px;
+  }
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 
-.aboutme_foto {
-    height: 90px;
-    width: 90px;
-    margin-right: 15px;
+html {
+  height: 100%;
 }
 
+body {
+  font-family: "Nanum Brush Script", cursive;
+  min-height: 100%;
+}
 
-
-
-
-/*     DISPLAY   TABLET     */
-
-   /* @media (min-width: 768px) { */
-
-   @media screen and (min-width: 768px) {
-    .aboutme_container {
-            font-family: 'Nanum Brush Script', cursive;
-            font-weight: 100;
-            display: grid;
-            grid-template-areas:
-            "header header"
-            "article article"
-            "footer footer";
-            grid-template-rows: 1fr auto 1fr;
-            grid-template-columns: 1fr 1fr;
-            align-items: center;
-        }
-
-        /* .header{
-            background-color: lavender;
-            display: flex;
-            justify-content: end;
-            border: 3px solid;
-            height: 120px
-        } */
-
-    }
-
-
-    /*     DISPLAY   DESKTOP     */
-
-    @media screen and (min-width: 1200px) {
-        .index_container {
-            font-family: 'Nanum Brush Script', cursive;
-            font-weight: 100;
-            display: grid;
-            grid-template-areas:
-            "header header"
-            "article article"
-            "footer footer";
-            grid-template-rows: 1fr auto 1fr;
-            grid-template-columns: 1fr 1fr;
-            align-items: center;
-            /* text-align: center; */
-        }
-
-
-        .aboutme_texto{
-            width: 70%;
-            font-size: 1.5rem;
-            margin-top: 40px;
-            color: yellow;
-            margin-left: 20px;
-            margin-right: 20px;
-        }
-
-        .aboutme_foto {
-            margin-bottom: 50px;
-            width: 160px ;
-            height: 150px;
-            margin-left: 70px;
-
-        }
-
-
-    }
-
-
-
-
+/* G   E   N   E   R  A   L   E  S    */
 @media print {
-    .index_container {
-        font-family: 'Nanum Brush Script', cursive;
-        font-weight: 100;
-        display: grid;
-        grid-template-areas:
-        "header header"
-        "article article"
-        "footer footer";
-        grid-template-rows: 1fr auto 1fr;
-        grid-template-columns: 1fr 1fr;
-        align-items: center;
-        /* text-align: center; */
-    }
-}
-
-
-
- /*    P  U  B  L  I  C  A  T   I   O   N   S    */
-
-/* MOBILE FIRST  */
-
-.publications_container {
+  .index_container {
+    font-family: "Nanum Brush Script", cursive;
+    font-weight: 100;
     display: grid;
-    grid-template-areas:
-                    "header"
-                    "article"
-                    "section"
-                    "footer";
-    grid-template-rows: 140px 300px 300px 140px;
-    grid-template-columns: 1fr;
+    grid-template-areas: "header header" "article article" "footer footer";
+    grid-template-rows: 1fr auto 1fr;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    /* text-align: center; */
+  }
+}
+/*    P  U  B  L  I  C  A  T   I   O   N   S    */
+/* MOBILE FIRST  */
+.publications_container {
+  display: grid;
+  grid-template-areas: "header" "article" "section" "footer";
+  grid-template-rows: 140px 300px 300px 140px;
+  grid-template-columns: 1fr;
 }
 
 .publications_article {
-    grid-area: article;
-    background: brown;
+  grid-area: article;
+  background: brown;
 }
+
 .publications_section {
-    grid-area: section;
-    background: lightcoral;
+  grid-area: section;
+  background: lightcoral;
 }
 
-
-
- /* M I D I A */
-
-
-
-
+/* M I D I A */
 /*      A  L   V   O   R   O   C  A
 
 
 MOBILE FIRST */
-
 .alvoroca_container {
-    display: grid;
-    grid-template-areas:
-                    "header"
-                    "article"
-                    "main"
-                    "footer";
-    grid-template-columns: 1fr;
-    grid-template-rows: 110px 300px auto 100px;
+  display: grid;
+  grid-template-areas: "header" "article" "main" "footer";
+  grid-template-columns: 1fr;
+  grid-template-rows: 110px 300px auto 100px;
 }
 
-
 /*   header    */
-
-.alvoroca_header{
-    display: flex;
-    grid-area: header;
-    background-color: orange;
-    align-items: center;
-    justify-content: space-evenly;
-    font-size: 20px;
+.alvoroca_header {
+  display: flex;
+  grid-area: header;
+  background-color: orange;
+  align-items: center;
+  justify-content: space-evenly;
+  font-size: 20px;
 }
 
 .alvoroca_navbar {
-    width: 250px;
-    border: solid 1px;
+  width: 250px;
+  border: solid 1px;
 }
 
 .alvoroca_nav_list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .alvoroca_nav_list li {
-    margin-right: 13px;
+  margin-right: 13px;
 }
-
 
 .alvo_logo {
-    width: 50px;
-    height: 50px;
-    margin-top: 15px;
-    margin-left: 5px;
+  width: 50px;
+  height: 50px;
+  margin-top: 15px;
+  margin-left: 5px;
 }
 
-
 /*   a  r  t  i  c l e  */
-
 .alvoroca_article {
-    grid-area: article;
+  grid-area: article;
 }
 
 /* Sol a Pino card */
-
 .section_solapino {
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .card_solap {
-    margin-top: 40px;
-    height: 200px;
-    width: 160px;
-    border-radius: 0px 0px 15px 15px;
-    border: solid 1px;
+  margin-top: 40px;
+  height: 200px;
+  width: 160px;
+  border-radius: 0px 0px 15px 15px;
+  border: solid 1px;
 }
 
 .card_body_sola {
-    margin-top: 140px;
+  margin-top: 140px;
 }
 
-/* 
-.card_title {
-    margin-top: 150px;
-} */
-
 /*  m a i n  */
-
 .alvoroca_main {
-    grid-area: main;
-    /* margin-top: 40px; */
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    font-size: 0.9rem;
+  grid-area: main;
+  /* margin-top: 40px; */
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  font-size: 0.9rem;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .card {
-    width: 170px;
-    height: auto;
-    border: solid 1px;
-    margin-bottom: 20px;
+  width: 150px;
+  height: auto;
+  border: solid 1px;
+  margin-bottom: 20px;
 }
 
 .card_images {
-    height: 70%;
-    width: 100%;
+  height: 70%;
+  width: 100%;
 }
 
 .card_body {
-    margin-top: 14px;
+  margin-top: 14px;
+  margin-left: 8px;
 }
 
+.card_title {
+  margin-bottom: 15px;
+}
 
 /*
 @media screen and (min-width: 1200px) {
@@ -588,4 +368,4 @@ MOBILE FIRST */
     margin-left: 5px;
     }
 
-} */
+} *//*# sourceMappingURL=styles.css.map */
