--- a/styles/partials/_aboutme.scss
+++ b/styles/partials/_aboutme.scss
@@ -12,12 +12,88 @@
     align-items: center;
     text-align: center;
     min-width: 100%;
-    background-color:pink;
+    background-color: yellowgreen;
 
     .aboutme_article{
         grid-area: article;
         display: flex;
-        background-color: yellowgreen;
+        justify-content: center;
+        font-size: 1.1rem;
         color: red;
-    }
+        height: 440px;
+        margin-top: 60px;
+
+        .aboutme_framepic{
+            .aboutme_pic{
+                height: 90px;
+                width: 90px;
+                margin-right: 5px;
+            }
+        }
+    }   
 }
+
+
+  /* @media (min-width: 768px) { */
+
+    @media screen and (min-width: 768px) {
+        .aboutme_container {
+            font-family: 'Nanum Brush Script', cursive;
+            font-weight: 100;
+            display: grid;
+            grid-template-areas:
+                "header header"
+                "article article"
+                "footer footer";
+            grid-template-rows: 1fr auto 1fr;
+            grid-template-columns: 1fr 1fr;
+            align-items: center;
+        }
+    
+            /* .header{
+                background-color: lavender;
+                display: flex;
+                justify-content: end;
+                border: 3px solid;
+                height: 120px
+            } */
+    
+        }
+    
+    
+        /*     DISPLAY   DESKTOP     */
+    
+        @media screen and (min-width: 1200px) {
+            .aboutme_container {
+                font-family: 'Nanum Brush Script', cursive;
+                font-weight: 100;
+                display: grid;
+                grid-template-areas:
+                "header header"
+                "article article"
+                "footer footer";
+                grid-template-rows: 1fr auto 1fr;
+                grid-template-columns: 1fr 1fr;
+                align-items: center;
+                /* text-align: center; */
+            }
+    
+    
+            .aboutme_texto{
+                width: 70%;
+                font-size: 1.5rem;
+                margin-top: 40px;
+                color: yellow;
+                margin-left: 20px;
+                margin-right: 20px;
+            }
+    
+            .aboutme_framepic {
+                .aboutme_pic{
+                    margin-bottom: 50px;
+                    width: 160px ;
+                    height: 150px;
+                    margin-left: 70px;
+                }
+            }
+        }
