--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,26 +106,17 @@
   min-width: 100%;
   background-color: grey;
 }
-
-.index_article {
+.index_container .index_article {
   grid-area: article;
   display: flex;
   justify-content: left;
   height: 400px;
 }
-
-.index_texto {
+.index_container .index_article .index_texto {
   font-size: 1.1rem;
   color: white;
   text-align: left;
   margin: 40px 20px 0px 10px;
-}
-
-.index_foto {
-  margin-top: 50px;
-  margin-bottom: 50px;
-  width: 130px;
-  height: 50px;
 }
 
 /*     DISPLAY   TABLET     */
@@ -141,7 +132,7 @@
     align-items: center;
     text-align: center;
   }
-  .header {
+  .index_container .header {
     background-color: lavender;
     display: flex;
     justify-content: end;
@@ -164,11 +155,11 @@
     align-items: center;
     text-align: center;
   }
-  .index_article {
+  .index_container .index_article {
     grid-area: article;
     height: 500px;
   }
-  .index_texto {
+  .index_container .index_article .index_texto {
     max-width: 70%;
     font-size: 1.7rem;
     margin-top: 50px;
@@ -177,26 +168,54 @@
     margin-right: 20px;
   }
 }
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
+.aboutme_container {
+  font-weight: 100;
+  display: grid;
+  grid-template-areas: "header" "article" "footer";
+  grid-template-rows: 140px 450px 140px;
+  grid-template-columns: 1fr;
+  align-items: center;
+  text-align: center;
+  min-width: 100%;
+  background-color: yellowgreen;
+}
+.aboutme_container .aboutme_article {
+  grid-area: article;
+  display: flex;
+  justify-content: center;
+  font-size: 1.1rem;
+  color: red;
+  height: 440px;
+  margin-top: 60px;
+}
+.aboutme_container .aboutme_article .aboutme_framepic .aboutme_pic {
+  height: 90px;
+  width: 90px;
+  margin-right: 5px;
 }
 
-html {
-  height: 100%;
+/* @media (min-width: 768px) { */
+@media screen and (min-width: 768px) {
+  .aboutme_container {
+    font-family: "Nanum Brush Script", cursive;
+    font-weight: 100;
+    display: grid;
+    grid-template-areas: "header header" "article article" "footer footer";
+    grid-template-rows: 1fr auto 1fr;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+  }
+  /* .header{
+      background-color: lavender;
+      display: flex;
+      justify-content: end;
+      border: 3px solid;
+      height: 120px
+  } */
 }
-
-body {
-  font-family: "Nanum Brush Script", cursive;
-  min-height: 100%;
-}
-
-/* G   E   N   E   R  A   L   E  S    */
-@media print {
-  .index_container {
+/*     DISPLAY   DESKTOP     */
+@media screen and (min-width: 1200px) {
+  .aboutme_container {
     font-family: "Nanum Brush Script", cursive;
     font-weight: 100;
     display: grid;
@@ -206,8 +225,21 @@ body {
     align-items: center;
     /* text-align: center; */
   }
+  .aboutme_texto {
+    width: 70%;
+    font-size: 1.5rem;
+    margin-top: 40px;
+    color: yellow;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .aboutme_framepic .aboutme_pic {
+    margin-bottom: 50px;
+    width: 160px;
+    height: 150px;
+    margin-left: 70px;
+  }
 }
-/*    P  U  B  L  I  C  A  T   I   O   N   S    */
 /* MOBILE FIRST  */
 .publications_container {
   display: grid;
@@ -223,14 +255,9 @@ body {
 
 .publications_section {
   grid-area: section;
-  background: lightcoral;
+  background: blueviolet;
 }
 
-/* M I D I A */
-/*      A  L   V   O   R   O   C  A
-
-
-MOBILE FIRST */
 .alvoroca_container {
   display: grid;
   grid-template-areas: "header" "article" "main" "footer";
@@ -368,4 +395,33 @@ MOBILE FIRST */
     margin-left: 5px;
     }
 
-} *//*# sourceMappingURL=styles.css.map */
+} */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  font-family: "Nanum Brush Script", cursive;
+  min-height: 100%;
+}
+
+@media print {
+  .index_container {
+    font-family: "Nanum Brush Script", cursive;
+    font-weight: 100;
+    display: grid;
+    grid-template-areas: "header header" "article article" "footer footer";
+    grid-template-rows: 1fr auto 1fr;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    /* text-align: center; */
+  }
+}/*# sourceMappingURL=styles.css.map */
