--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,9 +2,8 @@
 .header {
   display: flex;
   grid-area: header;
-  background-color: yellowgreen;
+  background-color: red;
   justify-content: space-evenly;
-  color: red;
   justify-items: center;
   align-items: center;
   height: 140px;
@@ -13,7 +12,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  background-color: red;
 }
 .header .navbar ul li {
   padding: 20px;
@@ -22,34 +20,34 @@
   color: black;
 }
 .header .navbar ul li a {
-  color: pink;
+  color: greenyellow;
   font-size: 1.2rem;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1220px) {
   .header {
-    background-color: yellow;
     display: flex;
-    justify-content: end;
-    border: 3px solid;
-    height: 200px;
-  }
-  .header .navbar {
-    display: flex;
-    width: auto;
-    align-items: flex-end;
+    grid-area: header;
+    background-color: pink;
+    justify-content: flex-end;
+    justify-items: center;
+    align-items: center;
+    height: 140px;
   }
   .header .navbar ul {
     display: flex;
     flex-wrap: wrap;
-    align-items: flex-end;
+    justify-content: space-around;
   }
   .header .navbar ul li {
     padding: 20px;
   }
+  .header .navbar ul li:hover {
+    color: black;
+  }
   .header .navbar ul li a {
-    color: rgb(246, 255, 0);
-    font-size: 1.3rem;
+    color: greenyellow;
+    font-size: 1.6rem;
   }
 }
 .footer {
@@ -178,6 +176,7 @@
   text-align: center;
   min-width: 100%;
   background-color: yellowgreen;
+  line-height: 1.4em;
 }
 .aboutme_container .aboutme_article {
   grid-area: article;
@@ -186,12 +185,11 @@
   font-size: 1.1rem;
   color: red;
   height: 440px;
-  margin-top: 60px;
+  margin: 60px 5px 0px 15px;
 }
 .aboutme_container .aboutme_article .aboutme_framepic .aboutme_pic {
   height: 90px;
   width: 90px;
-  margin-right: 5px;
 }
 
 /* @media (min-width: 768px) { */
@@ -225,19 +223,22 @@
     align-items: center;
     /* text-align: center; */
   }
-  .aboutme_texto {
-    width: 70%;
+  .aboutme_container .aboutme_article .aboutme_texto {
+    width: 90%;
     font-size: 1.5rem;
     margin-top: 40px;
     color: yellow;
     margin-left: 20px;
-    margin-right: 20px;
   }
-  .aboutme_framepic .aboutme_pic {
+  .aboutme_container .aboutme_article h2 {
+    display: flex;
+    justify-content: left;
+  }
+  .aboutme_container .aboutme_article .aboutme_framepic .aboutme_pic {
     margin-bottom: 50px;
     width: 160px;
     height: 150px;
-    margin-left: 70px;
+    margin-left: 40px;
   }
 }
 /* MOBILE FIRST  */
