work in progress

--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -61,7 +61,7 @@
                 }
     
                 a{
-                    color: greenyellow;
+                    color: blue;
                     font-size: 1.6rem;
                 }
             }
