--- a/styles/partials/_alvoroca.scss
+++ b/styles/partials/_alvoroca.scss
@@ -1,6 +1,8 @@
 
 // MOBILE FIRST 
 
+
+
 .alvoroca_container {
     display: grid;
     grid-template-areas:
@@ -9,107 +11,120 @@
                     "main"
                     "footer";
     grid-template-columns: 1fr;
-    grid-template-rows: 110px 300px auto 100px;
+    grid-template-rows: 110px 300px auto 80px;
+
+    .alvoroca_header{
+        display: flex;
+        grid-area: header;
+        background-color: orange;
+        align-items: center;
+        justify-content: space-evenly;
+        font-size: 20px;
+
+        .alvoroca_navbar {
+            width: 250px;
+            border: solid 1px;
+        
+            .alvoroca_nav_list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            li {
+                margin-right: 13px;
+            }
+            }
+        }
+
+        .alvo_logo {
+            width: 60px;
+            height: 60px;
+            margin-top: 4px;
+            margin-left: 5px;
+        }
+    }
+
+    .alvoroca_article {
+        grid-area: article;
+
+        .section_solapino {
+            display: flex;
+            justify-content: space-evenly;
+            flex-wrap: wrap;
+
+            .card_solap {
+                margin-top: 40px;
+                height: 200px;
+                width: 160px;
+                border-radius: 0px 0px 15px 15px;
+                border: solid 1px;
+
+                .card_images {
+                    height: 70%;
+                    width: 100%;
+                }
+            }
+
+            .card_body_sola {
+                margin-top: 140px;
+            
+                a{
+                    text-decoration: none;
+                    color: rgb(96, 6, 96);
+                    display: flex;
+                    justify-content: flex-end;
+                    margin-top: 50px;
+                }
+            }
+        }
+    }
+
+    .alvoroca_main {
+        grid-area: main;
+        /* margin-top: 40px; */
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        font-size: 0.9rem;
+        margin-left: 5px;
+        margin-right: 5px;
+
+        .card {
+            width: 150px;
+            height: auto;
+            border: solid 1px;
+            margin-bottom: 20px;
+
+            .card_images {
+                height: 70%;
+                width: 100%;
+            }
+
+            .card_body {
+                margin-top: 14px;
+                margin-left: 8px;
+                a{
+                    text-decoration: none;
+                    color: rgb(96, 6, 96);
+                    display: flex;
+                    justify-content: flex-end;
+                    margin-right: 4px;
+                }
+
+                .card_title {
+                    margin-bottom: 15px;
+                    
+                }
+            }
+        }
+        
+    }
 }
 
 
-/*   header    */
-
-.alvoroca_header{
-    display: flex;
-    grid-area: header;
-    background-color: orange;
-    align-items: center;
-    justify-content: space-evenly;
-    font-size: 20px;
-}
-
-.alvoroca_navbar {
-    width: 250px;
-    border: solid 1px;
-}
-
-.alvoroca_nav_list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.alvoroca_nav_list li {
-    margin-right: 13px;
-}
 
 
-.alvo_logo {
-    width: 50px;
-    height: 50px;
-    margin-top: 15px;
-    margin-left: 5px;
-}
 
 
-/*   a  r  t  i  c l e  */
-
-.alvoroca_article {
-    grid-area: article;
-}
-
-/* Sol a Pino card */
-
-.section_solapino {
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-
-.card_solap {
-    margin-top: 40px;
-    height: 200px;
-    width: 160px;
-    border-radius: 0px 0px 15px 15px;
-    border: solid 1px;
-}
-
-.card_body_sola {
-    margin-top: 140px;
-}
-
-
-/*  m a i n  */
-
-.alvoroca_main {
-    grid-area: main;
-    /* margin-top: 40px; */
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    font-size: 0.9rem;
-    margin-left: 5px;
-    margin-right: 5px;
-}
-
-.card {
-    width: 150px;
-    height: auto;
-    border: solid 1px;
-    margin-bottom: 20px;
-}
-
-.card_images {
-    height: 70%;
-    width: 100%;
-}
-
-.card_body {
-    margin-top: 14px;
-    margin-left: 8px;
-}
-
-
-.card_title {
-    margin-bottom: 15px;
-    
-}
 
 
 /*
