--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -4,29 +4,32 @@
     display: flex;
     grid-area: footer;
     height: 130px;
+    justify-content: space-evenly;
+    align-items: center;
     background-color: yellow;
     font-size: 0.8rem;
+    width: 100%;
 
     .footer_text {
-        width: 50%;
+        width: 20%;
         display: flex;
         justify-content: left;
-        margin-top: 80px;
-        margin-left: 5px;
+        margin-top: 100px;
+        
     }
 
     .footer_logos {
-        width: 40%;
+        width: 70%;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: right;
-        margin-top: 20px;
+        margin-right: 15px;
 
         .footer_logos_img {
-            height: 20px;
-            width: 20px;
-            margin-left: 10px;
+            width: 40px;
+            padding-right: 10px;
+            margin-left: 20px;
         }
     }
 }
@@ -45,19 +48,26 @@
 
 @media screen and (min-width: 1200px){
     .footer{
+        display: flex;
         height: 180px;
         font-size: 20px;
+        width: 100%;
+        background-color: yellowgreen;
         /* grid-area: footer; */
 
         .footer_text {
-            margin-top: 130px;
+            max-width: 50%;
+            background-color: red;
+            margin-left: 9px;
         }
 
-        .footer_logos {
+        .footer_logos {    
+            max-width: 50%;        
+            background-color: blue;
+
             .footer_logos_img {
                 height: 30px;
-                width: 30px;
-                margin-left: 10px;
+                width: 30px;                
             }
         }
     }
