--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -8,7 +8,7 @@
     "article"
     "footer";
     grid-template-rows: 140px 450px 140px;
-    grid-template-columns: 1fr;
+    grid-template-columns: 370px;
     align-items: center;
     text-align: center;
     min-width: 100%;
