--- a/styles/styles.css
+++ b/styles/styles.css
@@ -273,7 +273,7 @@
   display: grid;
   grid-template-areas: "header" "article" "main" "footer";
   grid-template-columns: 1fr;
-  grid-template-rows: 110px 300px auto 80px;
+  grid-template-rows: 110px auto auto 80px;
 }
 .alvoroca_container .alvoroca_header {
   display: flex;
@@ -304,11 +304,15 @@
 }
 .alvoroca_container .alvoroca_article {
   grid-area: article;
+  margin-right: 40px;
 }
 .alvoroca_container .alvoroca_article .section_solapino {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+}
+.alvoroca_container .alvoroca_article .section_solapino .card_image {
+  margin-right: 30px;
 }
 .alvoroca_container .alvoroca_article .section_solapino .card_image .card_images {
   margin-top: 60px;
@@ -317,48 +321,63 @@
   border: solid 1px;
 }
 .alvoroca_container .alvoroca_article .section_solapino .card_text {
-  padding-top: 140px;
+  padding-top: 150px;
 }
 .alvoroca_container .alvoroca_article .section_solapino .card_text .card_title {
-  padding-bottom: 60px;
+  padding-bottom: 100px;
 }
 .alvoroca_container .alvoroca_article .section_solapino .card_text a {
+  display: flex;
+  justify-content: flex-end;
   text-decoration: none;
   color: green;
+  justify-content: flex-end;
 }
 .alvoroca_container .alvoroca_main {
   grid-area: main;
-  margin-top: 60px;
+  margin-top: 80px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   font-size: 0.9rem;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 20px;
+  height: auto;
 }
-.alvoroca_container .alvoroca_main .card {
+.alvoroca_container .alvoroca_main .cards {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.alvoroca_container .alvoroca_main .cards .card {
   width: 150px;
   height: auto;
   border: solid 1px;
   margin-bottom: 20px;
+  margin-right: 10px;
 }
-.alvoroca_container .alvoroca_main .card .card_images {
-  height: 70%;
+.alvoroca_container .alvoroca_main .cards .card .card_images {
+  height: 170px;
   width: 100%;
 }
-.alvoroca_container .alvoroca_main .card .card_body {
-  margin-top: 14px;
+.alvoroca_container .alvoroca_main .cards .card .card_description {
+  margin-top: 8px;
   margin-left: 8px;
 }
-.alvoroca_container .alvoroca_main .card .card_body a {
+.alvoroca_container .alvoroca_main .cards .card .card_description .card_title {
+  margin-bottom: 20px;
+}
+.alvoroca_container .alvoroca_main .cards .card .card_description a {
   text-decoration: none;
   color: rgb(96, 6, 96);
   display: flex;
   justify-content: flex-end;
   margin-right: 4px;
 }
-.alvoroca_container .alvoroca_main .card .card_body .card_title {
-  margin-bottom: 15px;
+.alvoroca_container .alvoroca_main .cards .card8 {
+  background-color: pink;
+}
+.alvoroca_container .alvoroca_main .cards .card8 .card_container .card_images .card8hover:hover {
+  background-image: url("../images/l6.png");
 }
 
 @media screen and (min-width: 1200px) {
@@ -445,7 +464,7 @@
     font-size: 1.7em;
   }
   .alvoroca_container .alvoroca_main .section1 .card .card_description .card_details {
-    font-size: 1.4em;
+    font-size: 3.4em;
   }
   .alvoroca_container .alvoroca_main .section1 .card .card_description a {
     margin-left: 60%;
@@ -518,7 +537,7 @@
     margin-left: 60%;
     text-decoration: none;
     font-size: 1.4em;
-    color: blueviolet;
+    color: red;
     justify-content: right;
   }
 }
